components/policies-rd/base/konflux-rbac/bootstrap-tenant-namespace/.kyverno-test/resources/labeled-namespace-konflux.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labeled-namespace-konflux
  labels:
    konflux-ci.dev/type: tenant
