components/policies-rd/base/konflux-rbac/bootstrap-tenant-namespace/.kyverno-test/resources/expected-networkpolicy_allow-from-olm-namespaces.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-olm-namespaces
  namespace: labeled-namespace-konflux
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              openshift.io/scc: anyuid
  podSelector: {}
  policyTypes:
    - Ingress
